config-root/namespaces/jx/nexus-repository-manager-nexus/nexus-nexus-repository-manager-svc.yaml
# Source: nexus-repository-manager/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus-nexus-repository-manager
  labels:
    helm.sh/chart: nexus-repository-manager-37.0.0
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: nexus
    app.kubernetes.io/version: "3.37.0"
    app.kubernetes.io/managed-by: Helm
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'nexus'
  namespace: jx
spec:
  type: ClusterIP
  ports:
    - port: 8081
      protocol: TCP
      name: nexus-ui
  selector:
    app.kubernetes.io/name: nexus-repository-manager
    app.kubernetes.io/instance: nexus
